versions/0.8.1/_sources/refs/_aws-cdk_aws-cloud9.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"H+Iqh3+STdcyHy0mPH5BHun0z5b9IZ6cL0yhhQ8qO44="}

@aws-cdk/aws-cloud9
===================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/cloud9/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:cloud9:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="cloud9" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>cloud9</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:cloud9:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='cloud9', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cloud9/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cloud9@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cloud9": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cloud9@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cloud9/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cloud9@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cloud9": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cloud9@0.8.1



.. mdinclude:: ./__aws-cdk_aws-cloud9.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-cloud9

EnvironmentEC2Arn
^^^^^^^^^^^^^^^^^

.. py:class:: EnvironmentEC2Arn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloud9.EnvironmentEC2Arn;

      .. code-tab:: javascript

         const { EnvironmentEC2Arn } = require('@aws-cdk/aws-cloud9');

      .. code-tab:: typescript

         import { EnvironmentEC2Arn } from '@aws-cdk/aws-cloud9';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

EnvironmentEC2Name
^^^^^^^^^^^^^^^^^^

.. py:class:: EnvironmentEC2Name([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloud9.EnvironmentEC2Name;

      .. code-tab:: javascript

         const { EnvironmentEC2Name } = require('@aws-cdk/aws-cloud9');

      .. code-tab:: typescript

         import { EnvironmentEC2Name } from '@aws-cdk/aws-cloud9';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-cloud9.cloudformation

EnvironmentEC2Resource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EnvironmentEC2Resource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloud9.cloudformation.EnvironmentEC2Resource;

      .. code-tab:: javascript

         const { cloudformation.EnvironmentEC2Resource } = require('@aws-cdk/aws-cloud9');

      .. code-tab:: typescript

         import { cloudformation.EnvironmentEC2Resource } from '@aws-cdk/aws-cloud9';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``EnvironmentEC2Resource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``EnvironmentEC2Resource``
   :type properties: :py:class:`~@aws-cdk/aws-cloud9.cloudformation.EnvironmentEC2ResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: environmentEc2Arn

      :type: :py:class:`~@aws-cdk/aws-cloud9.EnvironmentEC2Arn` *(readonly)*


   .. py:attribute:: environmentEc2Name

      :type: :py:class:`~@aws-cdk/aws-cloud9.EnvironmentEC2Name` *(readonly)*

   .. py:class:: RepositoryProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.cloud9.cloudformation.EnvironmentEC2Resource.RepositoryProperty;

         .. code-tab:: javascript

            // cloudformation.EnvironmentEC2Resource.RepositoryProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.EnvironmentEC2Resource.RepositoryProperty } from '@aws-cdk/aws-cloud9';





      .. py:attribute:: pathComponent

         ``EnvironmentEC2Resource.RepositoryProperty.PathComponent``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cloud9-environmentec2-repository.html#cfn-cloud9-environmentec2-repository-pathcomponent


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: repositoryUrl

         ``EnvironmentEC2Resource.RepositoryProperty.RepositoryUrl``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cloud9-environmentec2-repository.html#cfn-cloud9-environmentec2-repository-repositoryurl


         :type: string or :py:class:`@aws-cdk/cdk.Token`



EnvironmentEC2ResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EnvironmentEC2ResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloud9.cloudformation.EnvironmentEC2ResourceProps;

      .. code-tab:: javascript

         // cloudformation.EnvironmentEC2ResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.EnvironmentEC2ResourceProps } from '@aws-cdk/aws-cloud9';





   .. py:attribute:: instanceType

      ``AWS::Cloud9::EnvironmentEC2.InstanceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloud9-environmentec2.html#cfn-cloud9-environmentec2-instancetype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: automaticStopTimeMinutes

      ``AWS::Cloud9::EnvironmentEC2.AutomaticStopTimeMinutes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloud9-environmentec2.html#cfn-cloud9-environmentec2-automaticstoptimeminutes


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::Cloud9::EnvironmentEC2.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloud9-environmentec2.html#cfn-cloud9-environmentec2-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: environmentEc2Name

      ``AWS::Cloud9::EnvironmentEC2.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloud9-environmentec2.html#cfn-cloud9-environmentec2-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ownerArn

      ``AWS::Cloud9::EnvironmentEC2.OwnerArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloud9-environmentec2.html#cfn-cloud9-environmentec2-ownerarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: repositories

      ``AWS::Cloud9::EnvironmentEC2.Repositories``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloud9-environmentec2.html#cfn-cloud9-environmentec2-repositories


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-cloud9.cloudformation.EnvironmentEC2Resource.RepositoryProperty` or undefined


   .. py:attribute:: subnetId

      ``AWS::Cloud9::EnvironmentEC2.SubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloud9-environmentec2.html#cfn-cloud9-environmentec2-subnetid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-cloud9

